Halfway done with A02

--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -290,7 +290,7 @@ Collapsed=0
 
 [A02s - 3D Primitives - About]
 Pos=1,1
-Size=323,284
+Size=316,284
 Collapsed=0
 
 [A03 - LERP - About]
@@ -396,5 +396,15 @@ Collapsed=0
 [E03_Repository_d - Command]
 Pos=1,152
 Size=315,452
+Collapsed=0
+
+[BlanS - A02_d - About]
+Pos=1,1
+Size=323,284
+Collapsed=0
+
+[BlanS - A02 - About]
+Pos=1,1
+Size=295,284
 Collapsed=0
 
