--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -408,3 +408,13 @@ Pos=1,1
 Size=295,284
 Collapsed=0
 
+[BlanS - E04 - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[BlanS - E04_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
