--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -433,3 +433,13 @@ Pos=1,1
 Size=323,165
 Collapsed=0
 
+[BlanS - A03_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[BlanS - A03 - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
