--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -310,7 +310,7 @@ Collapsed=0
 
 [A04s - Camera - About]
 Pos=1,1
-Size=295,114
+Size=323,114
 Collapsed=0
 
 [Builder]
@@ -481,5 +481,15 @@ Collapsed=0
 [BlanS - E06 - About]
 Pos=1,1
 Size=295,288
+Collapsed=0
+
+[BlanS - A04 - About]
+Pos=1,1
+Size=323,114
+Collapsed=0
+
+[BlanS - A04 - Ref - About]
+Pos=1,1
+Size=340,60
 Collapsed=0
 
