Initial work on A05

--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -498,3 +498,13 @@ Pos=1,1
 Size=323,254
 Collapsed=0
 
+[BlanS - A05 - About]
+Pos=1,1
+Size=323,275
+Collapsed=0
+
+[BlanS - A05_d - About]
+Pos=1,1
+Size=316,275
+Collapsed=0
+
